@@ -1,3 +1,8 @@
+2019-01-24  Uroš Bizjak  <ubizjak@gmail.com>
+
+	PR target/88948
+	* gcc.target/i386/pr88948.c: New test.
+
 2019-01-24  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/89006
